# open_source_ebook_reader

./: .gitignore  Config.in  LICENSE  README.md  external.desc  external.mk  tasks.py
board/stm32mp135_common/dev/: genimage.cfg  genimage_debug.cfg  local.mk  rootfs_postbuild.sh  rootfs_postbuild_openocd.sh
board/stm32mp135_common/gdb/: paths.py  start.py
board/stm32mp135_common/linux/: debug.config  default.config  enable_usb_net.config
board/stm32mp135_common/openocd/: priv.py  reboot.py  start.py
board/stm32mp135_common/u-boot/: debug.config  debug.env  default.config  default.env  prod.config  uboot-post-rsync.sh
board/stm32mp135d_odyssey/linux/st/: stm32mp135d-odyssey-ebook-reader.dts
board/stm32mp135d_odyssey/optee-os/: stm32mp135d-odyssey-ebook-reader.dts
board/stm32mp135d_odyssey/rootfs_overlay/etc/it8951_epaper/: gpiod.conf
board/stm32mp135d_odyssey/tf-a/: stm32mp135d-odyssey-ebook-reader.dts
board/stm32mp135d_odyssey/u-boot/: stm32mp135d-odyssey-ebook-reader.dts
configs/: stm32mp135d_odyssey_debug_defconfig  stm32mp135d_odyssey_defconfig
docs/: Doxyfile  conf.py  getting_started.md  hardware.md  index.md  index.rst
docs/debug/: nfs.md  usb_net.md
docs/hardware/: buttons.md  display.md
kicad/buttons/: buttons.kicad_pcb  buttons.kicad_prl  buttons.kicad_pro  buttons.kicad_sch  fp-lib-table  sym-lib-table
kicad/buttons/libs/: 2026-05-30_16-37-57.kicad_sym  B3W_100[].step
kicad/buttons/libs/footprints.pretty/: SW_B3W-1000_OMR.kicad_mod
kicad/hat/: hat-B_Cu.gbl  hat-B_Mask.gbs  hat-B_Paste.gbp  hat-B_Silkscreen.gbo  hat-Edge_Cuts.gm1  hat-F_Cu.gtl  hat-F_Mask.gts  hat-F_Paste.gtp  hat-F_Silkscreen.gto  hat-NPTH.drl  hat-PTH.drl  hat.kicad_pcb  hat.kicad_prl  hat.kicad_pro  hat.kicad_sch  ~hat.kicad_pcb.lck
package/ebook_reader/: Config.in  README.md  ebook_reader.mk  meson.build  meson.options
package/ebook_reader/src/: main.c
package/ebook_reader/src/app/: app.c  app.h
package/ebook_reader/src/book_settings/: book_settings.c  book_settings.h  core.h  view.c  widgets.c
package/ebook_reader/src/db/: db.c  db.h
package/ebook_reader/src/display/: display.c  display.h  display_it8951.c  display_png.c  display_x11.c
package/ebook_reader/src/event_queue/: event_queue.c  event_queue.h
package/ebook_reader/src/menu/: core.h  menu.c  menu.h  view.c  widgets.c
package/ebook_reader/src/reader/: core.h  reader.c  reader.h  view.c  widgets.c
package/ebook_reader/src/utils/: err.c  err.h  graphic.c  graphic.h  log.h  lvgl.c  lvgl.h  mem.c  mem.h  settings.c  settings.h  time.c  time.h  zlist.c  zlist.h
package/ebook_reader/test/: meson.build  test_list.c  test_unity.c
package/it8951_epaper/: Config.in  it8951_epaper.mk
package/lvgl/: Config.in  README.md  lvgl.mk
package/lvgl/v9.4.0/: 00-add_lv_conf.patch  01-fix_compiler_warnings_in_glft.patch  02-fix_compiler_warnings_in_opengles.patch
tools/: install_gpiod.py
tools/dfu/: flash.py
tools/ebook_reader/: cross_compile.py
tools/meson/: cross_compile.txt
